[tool.poetry]
name = "bufflib"
version = "1.0"
description = ""
authors = ["Andrew Elliott <andrew.elliott@glasgow.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,^3.9"
numpy = "^1.26.1"
scipy = "^1.11.3"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
